[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "feed_parser"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "feedparser",
    "sqlalchemy",
    "pydantic",
    "python-jose[cryptography]",
    "python-dotenv",
    "passlib[bcrypt]",
    "requests"
]
